buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'io.github.fvarrui:javapackager:1.7.2'
        classpath 'com.google.code.gson:gson:2.8.0'
    }
}

plugins {
    id 'java'
}
apply plugin: 'io.github.fvarrui.javapackager.plugin'


group 'me.third.right.youtubedl'
version '1.6'

repositories {
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

sourceSets {
    configureEach {
        dependencies {
            implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'
            implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'

            //Lombok
            compileOnly 'org.projectlombok:lombok:1.18.20'
            annotationProcessor 'org.projectlombok:lombok:1.18.20'

            implementation 'com.google.code.gson:gson:2.8.0'
        }
    }
}

javapackager {
    // common configuration
    mainClass = 'me.third.right.youtubedl.YTDL'
    bundleJre = true
    generateInstaller = false
    copyDependencies = true
    jreMinVersion = "17"
}
task packageMyAppForLinux(type: io.github.fvarrui.javapackager.gradle.PackageTask) {
    platform = "linux"
    createTarball = true
}
task packageMyAppForWindows(type: io.github.fvarrui.javapackager.gradle.PackageTask) {
    platform = "windows"
    createZipball = true
}
build.dependsOn(dependsOn: [ 'packageMyAppForLinux', 'packageMyAppForWindows' ])